feat: add trash button to workspacepanel; fixes #1260