@@ -449,7 +449,7 @@ public class WorkspacePanel extends JPanel {
     }
 
     /** Immutable record containing description text and associated file references */
-    public static record DescriptionWithReferences(
+    public record DescriptionWithReferences(
             String description,
             List<TableUtils.FileReferenceList.FileReferenceData> fileReferences,
             ContextFragment fragment) {
@@ -490,9 +490,6 @@ public class WorkspacePanel extends JPanel {
 
             // Extract data from the DescriptionWithReferences record
             DescriptionWithReferences data = (DescriptionWithReferences) value;
-            if (data == null) {
-                return panel; // Return empty panel if no data
-            }
 
             String description = data.description();
             List<TableUtils.FileReferenceList.FileReferenceData> fileReferences = data.fileReferences();
@@ -604,11 +601,7 @@ public class WorkspacePanel extends JPanel {
 
         public PopupBuilder add(List<Action> actions) {
             for (var action : actions) {
-                if (action == null) {
-                    popup.addSeparator();
-                } else {
-                    popup.add(new JMenuItem(action));
-                }
+                popup.add(new JMenuItem(action));
             }
             return this;
         }
@@ -667,6 +660,9 @@ public class WorkspacePanel extends JPanel {
     // Buttons
     // Table popup menu (when no row is selected)
     private JPopupMenu tablePopupMenu;
+
+    // Right-side action buttons
+    private final MaterialButton dropSelectedButton = new MaterialButton();
 
     private static final String READ_ONLY_TIP = "Select latest activity to enable";
     private static final String COPY_ALL_ACTION_CMD = "workspace.copyAll";
@@ -902,8 +898,7 @@ public class WorkspacePanel extends JPanel {
                 if (popupMenuMode == PopupMenuMode.COPY_ONLY) {
                     if (row >= 0) {
                         if (contextTable.getSelectedRowCount() == 0
-                                || !Arrays.stream(contextTable.getSelectedRows())
-                                        .anyMatch(r -> r == row)) {
+                                || Arrays.stream(contextTable.getSelectedRows()).noneMatch(r -> r == row)) {
                             contextTable.setRowSelectionInterval(row, row);
                         }
                         JMenuItem copyItem = new JMenuItem("Copy to Active Workspace");
@@ -950,6 +945,13 @@ public class WorkspacePanel extends JPanel {
         // Set selection mode to allow multiple selection
         contextTable.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
 
+        // Update drop button enablement on selection changes
+        contextTable.getSelectionModel().addListSelectionListener(e -> {
+            if (!e.getValueIsAdjusting()) {
+                updateDropSelectedButtonEnabled();
+            }
+        });
+
         // Install custom TransferHandler for copy operations and file-list drop import from ProjectTree
         final TransferHandler fileListDropHandler = new TransferHandler() {
             @Override
@@ -970,8 +972,7 @@ public class WorkspacePanel extends JPanel {
             @Override
             public boolean canImport(TransferSupport support) {
                 // Accept file list drops only
-                boolean isFileList = support.isDataFlavorSupported(DataFlavor.javaFileListFlavor);
-                return isFileList;
+                return support.isDataFlavorSupported(DataFlavor.javaFileListFlavor);
             }
 
             @Override
@@ -989,7 +990,7 @@ public class WorkspacePanel extends JPanel {
                     @SuppressWarnings("unchecked")
                     List<File> files =
                             (List<File>) support.getTransferable().getTransferData(DataFlavor.javaFileListFlavor);
-                    if (files == null || files.isEmpty()) {
+                    if (files.isEmpty()) {
                         return false;
                     }
 
@@ -1010,7 +1011,7 @@ public class WorkspacePanel extends JPanel {
                                 }
                                 return inside;
                             })
-                            .map(p -> projectRoot.relativize(p))
+                            .map(projectRoot::relativize)
                             .map(rel -> new ProjectFile(projectRoot, rel))
                             .collect(Collectors.toCollection(java.util.LinkedHashSet::new));
 
@@ -1051,8 +1052,7 @@ public class WorkspacePanel extends JPanel {
                             }
                             contextManager.submitContextTask(() -> {
                                 contextManager.addSummaries(
-                                        new java.util.HashSet<ProjectFile>(projectFiles),
-                                        Collections.<CodeUnit>emptySet());
+                                        new java.util.HashSet<>(projectFiles), Collections.emptySet());
                             });
                         }
                         default -> {
@@ -1151,21 +1151,42 @@ public class WorkspacePanel extends JPanel {
             addButton.addActionListener(e -> {
                 attachContextViaDialog();
             });
-            // Keyboard shortcut: Cmd/Ctrl+Shift+A opens the Attach Context dialog
+            // Keyboard shortcut: Cmd/Ctrl+Shift+I opens the Attach Context dialog
             KeyboardShortcutUtil.registerGlobalShortcut(
                     WorkspacePanel.this,
                     KeyboardShortcutUtil.createPlatformShiftShortcut(KeyEvent.VK_I),
                     "attachContext",
-                    () -> SwingUtilities.invokeLater(() -> {
-                        attachContextViaDialog();
-                    }));
+                    () -> SwingUtilities.invokeLater(this::attachContextViaDialog));
 
-            // Wrap the button so it vertically centers nicely with the labels
+            // Create a trash button to drop selected fragment(s)
+            dropSelectedButton.setIcon(Icons.TRASH);
+            dropSelectedButton.setToolTipText("Drop selected item(s) from workspace");
+            dropSelectedButton.setFocusable(false);
+            dropSelectedButton.setOpaque(false);
+            dropSelectedButton.addActionListener(e -> {
+                var fragsToDrop = getSelectedFragments();
+                if (fragsToDrop.isEmpty()) {
+                    // No-op if no selection; enable state prevents this in normal flow.
+                    return;
+                }
+                performContextActionAsync(ContextAction.DROP, fragsToDrop);
+            });
+
+            // Panel to hold buttons with horizontal gap
+            var buttonsPanel = new JPanel(new FlowLayout(FlowLayout.LEFT, Constants.H_GAP, 0));
+            buttonsPanel.setOpaque(false);
+            buttonsPanel.add(addButton);
+            buttonsPanel.add(dropSelectedButton);
+
+            // Wrap the buttons so they vertically center nicely with the labels
             var buttonWrapper = new JPanel(new GridBagLayout());
             buttonWrapper.setOpaque(false);
-            buttonWrapper.add(addButton);
+            buttonWrapper.add(buttonsPanel);
 
             summaryWithAdd.add(buttonWrapper, BorderLayout.EAST);
+
+            // Initialize the enabled state according to selection/editability
+            updateDropSelectedButtonEnabled();
         }
 
         contextSummaryPanel.add(summaryWithAdd, BorderLayout.NORTH);
@@ -1258,11 +1279,11 @@ public class WorkspacePanel extends JPanel {
 
             private void handleScrollPanePopup(MouseEvent e) {
                 if (e.isPopupTrigger()) {
-                    // Use the scroll pane directly instead of getting it from the layered pane
-                    var scrollPane = tableScrollPane;
                     // Get the event point in view coordinates
                     var viewPoint = SwingUtilities.convertPoint(
-                            scrollPane, e.getPoint(), scrollPane.getViewport().getView());
+                            tableScrollPane,
+                            e.getPoint(),
+                            tableScrollPane.getViewport().getView());
 
                     // If the click is in the table and on a row, let the table's listener handle it
                     if (contextTable.getRowCount() > 0) {
@@ -1273,7 +1294,7 @@ public class WorkspacePanel extends JPanel {
                     }
 
                     // Otherwise show the table popup menu
-                    tablePopupMenu.show(scrollPane, e.getX(), e.getY());
+                    tablePopupMenu.show(tableScrollPane, e.getX(), e.getY());
                 }
             }
         };
@@ -1490,15 +1511,10 @@ public class WorkspacePanel extends JPanel {
     /** Returns true if all files from the fragments are tracked project files */
     private boolean allTrackedProjectFiles(List<ContextFragment> fragments) {
         var project = contextManager.getProject();
-        var allFiles = fragments.stream()
-                .flatMap(frag -> frag.files().stream())
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
+        var allFiles = fragments.stream().flatMap(frag -> frag.files().stream()).collect(Collectors.toSet());
 
         return !allFiles.isEmpty()
                 && allFiles.stream()
-                        .filter(ProjectFile.class::isInstance)
-                        .map(ProjectFile.class::cast)
                         .allMatch(pf -> pf.exists()
                                 && project.getRepo().getTrackedFiles().contains(pf));
     }
@@ -1525,7 +1541,7 @@ public class WorkspacePanel extends JPanel {
                                 file.getFileName(), file.toString(), file))
                         .distinct()
                         .sorted(Comparator.comparing(TableUtils.FileReferenceList.FileReferenceData::getFileName))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 if (!fileReferences.isEmpty()) {
                     // We need to determine if the click was specifically on a badge
@@ -2038,7 +2054,7 @@ public class WorkspacePanel extends JPanel {
         // FIXME: prefer classes where available (more selective)
         selectedFragments.stream().flatMap(frag -> frag.files().stream()).forEach(selectedFiles::add);
 
-        if (selectedFiles.isEmpty() && selectedClasses.isEmpty()) {
+        if (selectedFiles.isEmpty()) {
             chrome.toolError("No files or classes identified for summarization in the selection.");
             return;
         }
@@ -2266,6 +2282,7 @@ public class WorkspacePanel extends JPanel {
             repaint();
 
             refreshMenuState();
+            updateDropSelectedButtonEnabled();
         });
     }
 
@@ -2331,6 +2348,26 @@ public class WorkspacePanel extends JPanel {
         this.dropAllMenuItem = dropAllMenuItem;
     }
 
+    /** Enable/disable the Drop Selected button based on selection and workspace state. */
+    private void updateDropSelectedButtonEnabled() {
+        boolean hasSelection = contextTable.getSelectedRowCount() > 0;
+        boolean editable = workspaceCurrentlyEditable;
+        boolean onLatest = isOnLatestContext();
+
+        boolean enabled = editable && onLatest && hasSelection;
+        dropSelectedButton.setEnabled(enabled);
+
+        if (!editable) {
+            dropSelectedButton.setToolTipText(READ_ONLY_TIP);
+        } else if (!onLatest) {
+            dropSelectedButton.setToolTipText("Drop is only available when viewing the latest context");
+        } else if (!hasSelection) {
+            dropSelectedButton.setToolTipText("Select item(s) to drop");
+        } else {
+            dropSelectedButton.setToolTipText("Drop selected item(s) from workspace");
+        }
+    }
+
     private void refreshMenuState() {
         var editable = workspaceCurrentlyEditable;
 
@@ -2362,6 +2399,9 @@ public class WorkspacePanel extends JPanel {
         if (dropAllMenuItem != null) {
             dropAllMenuItem.setEnabled(true);
         }
+
+        // Update drop-selected button
+        updateDropSelectedButtonEnabled();
     }
 
     @Override
@@ -2379,24 +2419,20 @@ public class WorkspacePanel extends JPanel {
     private void registerGlobalAttachDispatcher() {
         if (globalAttachDispatcher != null) return;
 
-        globalAttachDispatcher = new KeyEventDispatcher() {
-            @Override
-            public boolean dispatchKeyEvent(KeyEvent e) {
-                if (e.getID() != KeyEvent.KEY_PRESSED) return false;
+        globalAttachDispatcher = e -> {
+            if (e.getID() != KeyEvent.KEY_PRESSED) return false;
 
-                int mods = e.getModifiersEx();
-                int shortcutMask =
-                        Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx(); // Cmd on macOS, Ctrl elsewhere
-                boolean hasShortcut = (mods & shortcutMask) != 0;
-                boolean hasShift = (mods & InputEvent.SHIFT_DOWN_MASK) != 0;
+            int mods = e.getModifiersEx();
+            int shortcutMask = Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx(); // Cmd on macOS, Ctrl elsewhere
+            boolean hasShortcut = (mods & shortcutMask) != 0;
+            boolean hasShift = (mods & InputEvent.SHIFT_DOWN_MASK) != 0;
 
-                if (hasShortcut && hasShift && e.getKeyCode() == KeyEvent.VK_I) {
-                    SwingUtilities.invokeLater(() -> attachContextViaDialog());
-                    // Consume the event so focused components (e.g., terminal) don't handle it
-                    return true;
-                }
-                return false;
+            if (hasShortcut && hasShift && e.getKeyCode() == KeyEvent.VK_I) {
+                SwingUtilities.invokeLater(() -> attachContextViaDialog());
+                // Consume the event so focused components (e.g., terminal) don't handle it
+                return true;
             }
+            return false;
         };
 
         KeyboardFocusManager.getCurrentKeyboardFocusManager().addKeyEventDispatcher(globalAttachDispatcher);
